# knn-vc-official

./: README.md  hubconf.py  knn_alt.py  knnvc_demo.ipynb  matcher.py  matcher_test.py  prematch_dataset.py  pyproject.toml
hifigan/: meldataset.py  models.py  train.py  train_simple.py  utils.py
wavlm/: WavLM.py  modules.py
